--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./styles/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 992px)" href="./styles/tablette_resolution.css">
-    <link rel="stylesheet"  media="screen and (min-width: 993px)" href="./styles/desktop_resolution.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="https://kit.fontawesome.com/f74121bcce.js" crossorigin="anonymous"></script>
     <title>Oh My Food</title>
 </head>
