deplacement "prev" dans  balise main.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
 <body>
     <header class="header">
         <div class="header__logo"><img src="./img/logo/ohmyfood.png" alt="logo ohmyfood"></div>
-        <div class="header__location">
-            <i class="fa-solid fa-location-dot"></i>
-            <p>Paris, Belleville</p>
-        </div>
-        <div class="header__reservation">
-            <h1>Réservez le menu qui vous convient</h1>
-            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <button>Explorer nos restaurants</button>
-        </div>
     </header>
     <main>
+        <div class="prev">
+            <div class="prev__location">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>Paris, Belleville</p>
+            </div>
+            <div class="prev__reservation">
+                <h1>Réservez le menu qui vous convient</h1>
+                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                <button>Explorer nos restaurants</button>
+            </div>
+
+        </div>
         <div class="functioning">
             <h1 class="functioning__title">Fonctionnement</h1>
             <div class="functioning__card functioning__card-style">
