--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <h2>La palette du goût</h2>
                         <p>Ménilmontant</p>
                     </div>
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="#"><i class="fa-regular fa-heart"></i></a>
                 </div>
             </div>
             <div class="restaurant__card">
@@ -64,7 +64,7 @@
                         <h2>La note enchantée</h2>
                         <p>Charonne</p>
                     </div>
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="#"><i class="fa-regular fa-heart"></i></a>
                 </div>
             </div>
             <div class="restaurant__card">
@@ -74,7 +74,7 @@
                         <h2>À la française</h2>
                         <p>Cité Rouge</p>
                     </div>
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="#"><i class="fa-regular fa-heart"></i></a> 
                 </div>
             </div>
             <div class="restaurant__card">
@@ -84,23 +84,23 @@
                         <h2>Le délice des sens</h2>
                         <p>Folie-Méricourt</p>
                     </div>
-                    <i class="fa-regular fa-heart"></i>
+                    <a href="#"><i class="fa-regular fa-heart"></i></a>
                 </div>
             </div>
         </div>
     </main>
-    <footer>
-        <h3>ohmyfood</h3>
-        <div>
+    <footer class="footer">
+        <h3 class="footer__title">ohmyfood</h3>
+        <div class="footer-space">
             <i class="fa-solid fa-utensils"></i>
-            <p>Proposer un restaurant</p>
+            <a href="#"><p>Proposer un restaurant</p></a>
         </div>
-        <div>
+        <div class="footer-space">
             <i class="fa-solid fa-handshake"></i>
-            <p>Devenir partenaire</p>
+            <a href="#"><p>Devenir partenaire</p></a>
         </div>
-        <p>Mentions légales</p>
-        <p>Contact</p>
+        <a href="#"><p class="footer-space">Mentions légales</p></a>
+        <a href="#"><p class="footer-space">Contact</p></a>
     </footer>
 </body>
 </html>
