--- a/index.html
+++ b/index.html
@@ -46,46 +46,54 @@
         <div class="restaurant">
             <h1 class="restaurant__title">Restaurants</h1>
             <div class="restaurant__card">
-                <p class="restaurant__card-notif">Nouveau</p>
-                <img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
-                <div class="restaurant__card-text">
-                    <div>
-                        <h2>La palette du goût</h2>
-                        <p>Ménilmontant</p>
+                <a href="#">
+                    <p class="restaurant__card-notif">Nouveau</p>
+                    <img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
+                    <div class="restaurant__card-text">
+                        <div>
+                            <h2>La palette du goût</h2>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
                     </div>
-                    <a href="#"><i class="fa-regular fa-heart"></i></a>
-                </div>
+                </a>
             </div>
             <div class="restaurant__card">
-                <p class="restaurant__card-notif">Nouveau</p>
-                <img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
-                <div class="restaurant__card-text">
-                    <div>
-                        <h2>La note enchantée</h2>
-                        <p>Charonne</p>
+                <a href="#">
+                    <p class="restaurant__card-notif">Nouveau</p>
+                    <img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
+                    <div class="restaurant__card-text">
+                        <div>
+                            <h2>La note enchantée</h2>
+                            <p>Charonne</p>
+                        </div>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
                     </div>
-                    <a href="#"><i class="fa-regular fa-heart"></i></a>
-                </div>
+                </a>
             </div>
             <div class="restaurant__card">
-                <img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                <div class="restaurant__card-text">
-                    <div>
-                        <h2>À la française</h2>
-                        <p>Cité Rouge</p>
+                <a href="#">
+                    <img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                    <div class="restaurant__card-text">
+                        <div>
+                            <h2>À la française</h2>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a> 
                     </div>
-                    <a href="#"><i class="fa-regular fa-heart"></i></a> 
-                </div>
+                </a>
             </div>
             <div class="restaurant__card">
-                <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                <div class="restaurant__card-text">
-                    <div>
-                        <h2>Le délice des sens</h2>
-                        <p>Folie-Méricourt</p>
+                <a href="#">
+                    <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                    <div class="restaurant__card-text">
+                        <div>
+                            <h2>Le délice des sens</h2>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
                     </div>
-                    <a href="#"><i class="fa-regular fa-heart"></i></a>
-                </div>
+                </a>
             </div>
         </div>
     </main>
