--- a/index.html
+++ b/index.html
@@ -9,110 +9,116 @@
     <title>Oh My Food</title>
 </head>
 <body>
-    <header class="header">
-        <div class="header__logo"><img src="./img/logo/ohmyfood.png" alt="logo ohmyfood"></div>
-    </header>
-    <main>
-        <div class="prev">
-            <div class="prev__location">
-                <i class="fa-solid fa-location-dot"></i>
-                <p>Paris, Belleville</p>
-            </div>
-            <div class="prev__reservation">
-                <h1>Réservez le menu qui vous convient</h1>
-                <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                <button class="button--pink">Explorer nos restaurants</button>
-            </div>
+    <div class="loader">
+        <p class="loader__text">Chargement...</p>
+        <div class="loader__spinner"></div>
+    </div>
+    <div class="homepage">
+        <header class="header">
+            <div class="header__logo"><img src="./img/logo/ohmyfood.png" alt="logo ohmyfood"></div>
+        </header>
+        <main>
+            <div class="prev">
+                <div class="prev__location">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>Paris, Belleville</p>
+                </div>
+                <div class="prev__reservation">
+                    <h1>Réservez le menu qui vous convient</h1>
+                    <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                    <button class="button--pink">Explorer nos restaurants</button>
+                </div>
 
-        </div>
-        <div class="functioning">
-            <h1 class="functioning__title">Fonctionnement</h1>
-            <div class="functioning__card functioning__card-style">
-                <span>1</span>
-                <i class="fa-solid fa-mobile-screen-button"></i>
-                <p>Choisissez un restaurant</p>
             </div>
-            <div class="functioning__card functioning__card-style">
-                <span>2</span>
-                <i class="fa-solid fa-list"></i>
-                <p>Composez votre menu</p>
+            <div class="functioning">
+                <h1 class="functioning__title">Fonctionnement</h1>
+                <div class="functioning__card functioning__card-style">
+                    <span>1</span>
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <p>Choisissez un restaurant</p>
+                </div>
+                <div class="functioning__card functioning__card-style">
+                    <span>2</span>
+                    <i class="fa-solid fa-list"></i>
+                    <p>Composez votre menu</p>
+                </div>
+                <div class="functioning__card functioning__card-style">
+                    <span>3</span>
+                    <i class="fa-sharp fa-solid fa-store"></i>
+                    <p>Dégustez au restaurant</p>
+                </div>
             </div>
-            <div class="functioning__card functioning__card-style">
-                <span>3</span>
-                <i class="fa-sharp fa-solid fa-store"></i>
-                <p>Dégustez au restaurant</p>
-            </div>
-        </div>
-        <div class="restaurant">
-            <h1 class="restaurant__title">Restaurants</h1>
-            <div class="restaurant__card">
-                <a href="./contenu/menu-la-palette-du-gout/menu_la_palette_du_gout.html">
-                    <p class="restaurant__card-notif">Nouveau</p>
-                    <img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
-                    <div class="restaurant__card-text">
-                        <div>
-                            <h2>La palette du goût</h2>
-                            <p>Ménilmontant</p>
+            <div class="restaurant">
+                <h1 class="restaurant__title">Restaurants</h1>
+                <div class="restaurant__card">
+                    <a href="./contenu/menu-la-palette-du-gout/menu_la_palette_du_gout.html">
+                        <p class="restaurant__card-notif">Nouveau</p>
+                        <img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
+                        <div class="restaurant__card-text">
+                            <div>
+                                <h2>La palette du goût</h2>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <i class="fa-regular fa-heart heart-white"></i>
+                            <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
                         </div>
-                        <i class="fa-regular fa-heart heart-white"></i>
-                        <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
-                    </div>
-                </a>
-            </div>
-            <div class="restaurant__card">
-                <a href="./contenu/menu-la-note-enchantee/menu_la_note_enchantee.html">
-                    <p class="restaurant__card-notif">Nouveau</p>
-                    <img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
-                    <div class="restaurant__card-text">
-                        <div>
-                            <h2>La note enchantée</h2>
-                            <p>Charonne</p>
+                    </a>
+                </div>
+                <div class="restaurant__card">
+                    <a href="./contenu/menu-la-note-enchantee/menu_la_note_enchantee.html">
+                        <p class="restaurant__card-notif">Nouveau</p>
+                        <img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
+                        <div class="restaurant__card-text">
+                            <div>
+                                <h2>La note enchantée</h2>
+                                <p>Charonne</p>
+                            </div>
+                            <i class="fa-regular fa-heart heart-white"></i>
+                            <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
                         </div>
-                        <i class="fa-regular fa-heart heart-white"></i>
-                        <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
-                    </div>
-                </a>
-            </div>
-            <div class="restaurant__card">
-                <a href="./contenu/menu-a-la-francaise/menu_a_la_francaise.html">
-                    <img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                    <div class="restaurant__card-text">
-                        <div>
-                            <h2>À la française</h2>
-                            <p>Cité Rouge</p>
+                    </a>
+                </div>
+                <div class="restaurant__card">
+                    <a href="./contenu/menu-a-la-francaise/menu_a_la_francaise.html">
+                        <img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                        <div class="restaurant__card-text">
+                            <div>
+                                <h2>À la française</h2>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <i class="fa-regular fa-heart heart-white"></i>
+                            <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
                         </div>
-                        <i class="fa-regular fa-heart heart-white"></i>
-                        <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
-                    </div>
-                </a>
-            </div>
-            <div class="restaurant__card">
-                <a href="./contenu/menu-le-delice-des-sens/menu_le_delice_des_sens.html">
-                    <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                    <div class="restaurant__card-text">
-                        <div>
-                            <h2>Le délice des sens</h2>
-                            <p>Folie-Méricourt</p>
+                    </a>
+                </div>
+                <div class="restaurant__card">
+                    <a href="./contenu/menu-le-delice-des-sens/menu_le_delice_des_sens.html">
+                        <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                        <div class="restaurant__card-text">
+                            <div>
+                                <h2>Le délice des sens</h2>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                            <i class="fa-regular fa-heart heart-white"></i>
+                            <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
                         </div>
-                        <i class="fa-regular fa-heart heart-white"></i>
-                        <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
-        </div>
-    </main>
-    <footer class="footer">
-        <h3 class="footer__title">ohmyfood</h3>
-        <div class="footer-space">
-            <i class="fa-solid fa-utensils"></i>
-            <a href="#"><p>Proposer un restaurant</p></a>
-        </div>
-        <div class="footer-space">
-            <i class="fa-solid fa-handshake"></i>
-            <a href="#"><p>Devenir partenaire</p></a>
-        </div>
-        <a href="#"><p class="footer-space">Mentions légales</p></a>
-        <a href="#"><p class="footer-space">Contact</p></a>
-    </footer>
+        </main>
+        <footer class="footer">
+            <h3 class="footer__title">ohmyfood</h3>
+            <div class="footer-space">
+                <i class="fa-solid fa-utensils"></i>
+                <a href="#"><p>Proposer un restaurant</p></a>
+            </div>
+            <div class="footer-space">
+                <i class="fa-solid fa-handshake"></i>
+                <a href="#"><p>Devenir partenaire</p></a>
+            </div>
+            <a href="#"><p class="footer-space">Mentions légales</p></a>
+            <a href="#"><p class="footer-space">Contact</p></a>
+        </footer>
+    </div>
 </body>
 </html>
