--- a/contenu/menu-a-la-francaise/menu_a_la_francaise.html
+++ b/contenu/menu-a-la-francaise/menu_a_la_francaise.html
@@ -33,7 +33,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Tartare de poulpe acidulé</h2>
@@ -45,7 +45,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Velouté de légumes d'antan</h2>
@@ -57,7 +57,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Soupe à l'oignon</h2>
@@ -77,7 +77,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Coquilles Saint-Jacques</h2>
@@ -89,7 +89,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Magret de canard</h2>
@@ -101,7 +101,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Pigeonneau d'Ille-et-Vilaine</h2>
@@ -121,7 +121,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Pétales de violettes glacés</h2>
@@ -133,7 +133,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Fondant au chocolat</h2>
@@ -145,7 +145,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Millefeuille croustillant</h2>
