animation bouton et ajout mail

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <a href="#"><p>Devenir partenaire</p></a>
             </div>
             <a href="#"><p class="footer-space">Mentions légales</p></a>
-            <a href="#"><p class="footer-space">Contact</p></a>
+            <a href="mailto:pavairon@gmail.com"><p class="footer-space">Contact</p></a>
         </footer>
     </div>
 </body>
