--- a/contenu/menu-la-palette-du-gout/menu_la_palette_du_gout.html
+++ b/contenu/menu-la-palette-du-gout/menu_la_palette_du_gout.html
@@ -175,7 +175,7 @@
             <a href="#"><p>Devenir partenaire</p></a>
         </div>
         <a href="#"><p class="footer-space">Mentions légales</p></a>
-        <a href="#"><p class="footer-space">Contact</p></a>
+        <a href="mailto:pavairon@gmail.com"><p class="footer-space">Contact</p></a>
     </footer>
 </body>
 </html>
