--- a/contenu/menu-le-delice-des-sens/menu_le_delice_des_sens.html
+++ b/contenu/menu-le-delice-des-sens/menu_le_delice_des_sens.html
@@ -175,7 +175,7 @@
             <a href="#"><p>Devenir partenaire</p></a>
         </div>
         <a href="#"><p class="footer-space">Mentions légales</p></a>
-        <a href="#"><p class="footer-space">Contact</p></a>
+        <a href="mailto:pavairon@gmail.com"><p class="footer-space">Contact</p></a>
     </footer>
 </body>
 </html>
