modif HTML animation

--- a/contenu/menu-la-palette-du-gout/menu_la_palette_du_gout.html
+++ b/contenu/menu-la-palette-du-gout/menu_la_palette_du_gout.html
@@ -33,7 +33,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Fricassée d'escargot</h2>
@@ -45,7 +45,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Foie gras de canard mi-cuit</h2>
@@ -57,7 +57,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Oeuf au plat</h2>
@@ -77,7 +77,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Filet de boeuf aux herbes</h2>
@@ -89,7 +89,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Parmentier de queu de boeuf</h2>
@@ -101,7 +101,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Filet de Turbot</h2>
@@ -121,7 +121,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Paris-Brest</h2>
@@ -133,7 +133,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Macaron au chocolat d'exception</h2>
@@ -145,7 +145,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Mousse au chocolat</h2>
