--- a/contenu/menu-la-note-enchantee/menu_la_note_enchantee.html
+++ b/contenu/menu-la-note-enchantee/menu_la_note_enchantee.html
@@ -33,7 +33,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Ravioles de foie gras</h2>
@@ -45,7 +45,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Caviar de foie gras</h2>
@@ -57,7 +57,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Homard et espuma de potiron</h2>
@@ -69,7 +69,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Foie gras de canard cuit entier</h2>
@@ -89,7 +89,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Noix de coquilles Saint-Jacques</h2>
@@ -101,7 +101,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Langoustine poêlée</h2>
@@ -113,7 +113,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Mijoté de queue de boeuf</h2>
@@ -133,7 +133,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Macaron noisette et chocolat</h2>
@@ -145,7 +145,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Baba au rhum revisité</h2>
@@ -157,7 +157,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Tarte au citron meringuée</h2>
