--- a/contenu/menu-le-delice-des-sens/menu_le_delice_des_sens.html
+++ b/contenu/menu-le-delice-des-sens/menu_le_delice_des_sens.html
@@ -33,7 +33,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Tartare de thon</h2>
@@ -45,7 +45,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Bouchée de homard croustillant</h2>
@@ -57,7 +57,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--1">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Velouté de cèpes</h2>
@@ -77,7 +77,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Poulet rôti aux herbes de provence</h2>
@@ -89,7 +89,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Langouste rôtie</h2>
@@ -101,7 +101,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--2">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Côte de boeuf angus</h2>
@@ -121,7 +121,7 @@
                     <div class="menu__section--border"></div>
                 </div>
                 <div class="menu__section--flex">
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Farandole de desserts</h2>
@@ -133,7 +133,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Crème brulée</h2>
@@ -145,7 +145,7 @@
                             <i class="fa-solid fa-check check-icon"></i>
                         </div>
                     </div>
-                    <div class="menu__card">
+                    <div class="menu__card menu__card--3">
                         <div class="menu__card--text">
                             <div class="menu__card--flex">
                                 <h2>Tiramisu</h2>
